Saved results of a test run

--- a/notebooks/out_of_domain_uncertainty_rich_income_test/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_test/Income_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "77cafb90",
+   "id": "1bd74ee9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066343Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "61b39f1f",
+   "id": "241833d9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066551Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d5d163bd",
+   "id": "8c021c42",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066624Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "33f16ba5",
+   "id": "2bebc55c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.085024Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cea4da36",
+   "id": "aacafc4f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.086646Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "24e0fd3b",
+   "id": "c5388054",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.615817Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c0132e26",
+   "id": "22faac13",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.624868Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2dc2e799",
+   "id": "0efad0ea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.635057Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d80b7e5f",
+   "id": "18e8aca4",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aa821978",
+   "id": "cc98f764",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.584740Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b2c712",
+   "id": "0dc2d800",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e29a749d",
+   "id": "fd1175ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.612792Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c4f31a",
+   "id": "fd2eb485",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8d60251f",
+   "id": "e1d22edf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.635294Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "682cbb1b",
+   "id": "588d0b81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.991818Z",
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b70a5894",
+   "execution_count": 8,
+   "id": "cd3fc85b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:19.021346Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a7d67f",
+   "id": "5553fa65",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -311,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "cbe25d16",
+   "execution_count": 9,
+   "id": "7f0b505f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.342383Z",
@@ -432,7 +432,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "eda5d7cf",
+   "execution_count": 10,
+   "id": "1b1e0abd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.380074Z",
@@ -460,7 +460,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d3a655ba",
+   "execution_count": 11,
+   "id": "6b874ed7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.460383Z",
@@ -592,7 +592,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ead5a05d",
+   "execution_count": 12,
+   "id": "e679f30b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.512345Z",
@@ -620,7 +620,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f50556fb",
+   "execution_count": 13,
+   "id": "4b0ad02b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.528561Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b31ffdb7",
+   "id": "8fe6da0b",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c3ed6c",
+   "id": "79c86ca4",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -662,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "31ef208c",
+   "execution_count": 14,
+   "id": "74bee9ec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.548691Z",
@@ -672,15 +672,15 @@
    },
    "outputs": [],
    "source": [
-    "# tuned_params_filenames = ['tuning_results_Folktables_NY_2018_Employment_alpha_0.8_20230706__115508.csv']\n",
-    "# tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
-    "#                          for tuned_params_filename in tuned_params_filenames]"
+    "tuned_params_filenames = ['tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231028__134544.csv']\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                         for tuned_params_filename in tuned_params_filenames]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6998a320",
+   "execution_count": 15,
+   "id": "788d0f03",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.594507Z",
@@ -701,8 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c177dffe",
+   "execution_count": 16,
+   "id": "aa1ed301",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.061277Z",
@@ -714,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:32:15 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-28 18:05:51 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -735,7 +735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:32:15 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-10-28 18:05:51 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -753,7 +753,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:32:17 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-28 18:05:53 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -769,7 +769,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a10534fa59704d1bb882ccd1ade68ef5",
+       "model_id": "960e8142ec9f483eaaeec2f6e7c23ca8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,7 +784,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:32:17 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-10-28 18:05:53 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -799,7 +799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:42:06 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-10-28 18:15:55 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -1247,26 +1247,25 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023/10/28, 06:42:06: Tuning RandomForestClassifier...\n",
-      "2023/10/28, 09:45:44: Tuning for RandomForestClassifier is finished [F1 score = 0.8124367758310086, Accuracy = 0.8125666666666667]\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 09:45:44 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
-      "INFO:root:Models are tuned and saved to a file\n"
+      "2023-10-28 18:15:55 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/out_of_domain_uncertainty_rich_income_test/tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231028__134544.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 100, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 400, 'n_jobs': None, 'oob_score': False, 'random_state': 100, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9bc37f4ae074b698490314eb1fc8b31",
+       "model_id": "c54da40cb26f406ea5332fcb6562934c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1280,7 +1279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "922d5da4d2534209b33a3d38b02a32f3",
+       "model_id": "a0c08640fef14610bdaa0bb785787ebc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1302,16 +1301,16 @@
     "                                                 models_params_for_tuning=models_params_for_tuning,\n",
     "                                                 metrics_computation_config=metrics_computation_config,\n",
     "                                                 custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                                 with_tuning=True,\n",
-    "                                                 # with_tuning=False,\n",
-    "                                                 # tuned_params_df_paths=tuned_params_df_paths,\n",
+    "#                                                  with_tuning=True,\n",
+    "                                                 with_tuning=False,\n",
+    "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
     "                                                 verbose=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "627265e4",
+   "id": "1b07f8da",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1319,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "114b8591",
+   "id": "7646ec46",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1327,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a101580c",
+   "id": "c200ebfe",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1335,7 +1334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2e1577",
+   "id": "d599028f",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1343,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5858f694",
+   "id": "6cabccb9",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1352,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19fb5052",
+   "id": "da00f0ad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.079140Z",
