--- a/notebooks/out_of_domain_uncertainty_poor_income_test/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_test/Income_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0c3913f1",
+   "id": "dd2eceaa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.508840Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7b16dd84",
+   "id": "dd8bd2a9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509078Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bad1c7ae",
+   "id": "c1199e4b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509136Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ac595614",
+   "id": "9ecc7ce8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509254Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "164f0a65",
+   "id": "fa24153b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.598557Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "717ad782",
+   "id": "7c204dd5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.766776Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "624c86a5",
+   "id": "c7d7229a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.777334Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0daf2b7d",
+   "id": "72c33c67",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.785281Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5300304c",
+   "id": "dd79b68f",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0956c8d",
+   "id": "02055142",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:59.998217Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d24e4118",
+   "id": "e3b5630e",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ccc54971",
+   "id": "625100b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.026897Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7c4d22",
+   "id": "020ecf41",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0beee77b",
+   "id": "83b71776",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.049775Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5e45e2b0",
+   "id": "d1e7de7b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.391474Z",
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d3fbd949",
+   "execution_count": 8,
+   "id": "cc4e5d47",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.418361Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7b640b",
+   "id": "9509e8aa",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -311,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "93ca354a",
+   "execution_count": 9,
+   "id": "e482841f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.430736Z",
@@ -432,7 +432,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0666b117",
+   "execution_count": 10,
+   "id": "c3cf50f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.446908Z",
@@ -460,7 +460,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "09535807",
+   "execution_count": 11,
+   "id": "ee24366d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.347609Z",
@@ -592,7 +592,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "722b9b44",
+   "execution_count": 12,
+   "id": "f2a639b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.372599Z",
@@ -620,7 +620,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1328ede8",
+   "execution_count": 13,
+   "id": "a5c9ef8e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.426865Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b8eaa15",
+   "id": "6730319c",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce78474",
+   "id": "d5fcafae",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -662,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "892ead9c",
+   "execution_count": 14,
+   "id": "e6b3b8f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.429683Z",
@@ -672,15 +672,15 @@
    },
    "outputs": [],
    "source": [
-    "# tuned_params_filenames = ['tuning_results_Folktables_NY_2018_Employment_alpha_0.8_20230706__115508.csv']\n",
-    "# tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
-    "#                          for tuned_params_filename in tuned_params_filenames]"
+    "tuned_params_filenames = ['tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231028__131153.csv']\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                         for tuned_params_filename in tuned_params_filenames]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1ca7283e",
+   "execution_count": 15,
+   "id": "57da31c7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.470539Z",
@@ -701,8 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29c5471c",
+   "execution_count": 16,
+   "id": "1e6c21c9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.789657Z",
@@ -714,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:35:09 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-28 18:08:39 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -735,7 +735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:35:09 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-10-28 18:08:39 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -743,17 +743,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-domain full_df.shape --  (100000, 9)\n",
-      "In-domain init_features_df.shape --  (100000, 10)\n",
-      "In-domain number of rows in X_train_val --  90000\n",
-      "In-domain number of rows in X_test --  10000\n"
+      "In-domain full_df.shape --  (100000, 9)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:35:11 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-28 18:08:41 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -761,6 +758,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "In-domain init_features_df.shape --  (100000, 10)\n",
+      "In-domain number of rows in X_train_val --  90000\n",
+      "In-domain number of rows in X_test --  10000\n",
       "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
       "Out-of-domain 1 number of rows in X_train_val --  0\n",
       "Out-of-domain 1 number of rows in X_test --  10000\n"
@@ -769,7 +769,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44a41b4e1fbb49f197beaf03e9d41fb5",
+       "model_id": "aa2d1a3333574da99a4d8ce03d24fe9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,7 +784,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:35:11 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-10-28 18:08:41 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -799,7 +799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 06:44:50 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-10-28 18:15:33 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -1247,26 +1247,25 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023/10/28, 06:44:50: Tuning RandomForestClassifier...\n",
-      "2023/10/28, 09:11:53: Tuning for RandomForestClassifier is finished [F1 score = 0.7536117158274415, Accuracy = 0.8041999999999999]\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-28 09:11:53 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
-      "INFO:root:Models are tuned and saved to a file\n"
+      "2023-10-28 18:15:33 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/out_of_domain_uncertainty_poor_income_test/tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231028__131153.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': None, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 400, 'n_jobs': None, 'oob_score': False, 'random_state': 100, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3e97722c9664390a1e0b99314651554",
+       "model_id": "aa6c806db59a486ca8d1cc6c223b1ea6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1280,7 +1279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8093985785a4998a3e75349e9232cb0",
+       "model_id": "a12b519f49ef4cf9a7f665377638e08b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1302,16 +1301,16 @@
     "                                                 models_params_for_tuning=models_params_for_tuning,\n",
     "                                                 metrics_computation_config=metrics_computation_config,\n",
     "                                                 custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                                 with_tuning=True,\n",
-    "                                                 # with_tuning=False,\n",
-    "                                                 # tuned_params_df_paths=tuned_params_df_paths,\n",
+    "#                                                  with_tuning=True,\n",
+    "                                                 with_tuning=False,\n",
+    "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
     "                                                 verbose=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4325880e",
+   "id": "70b67779",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1319,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ffcd9aa",
+   "id": "85b7fb32",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1327,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6fc31be",
+   "id": "4f705794",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1335,7 +1334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb095b96",
+   "id": "2c00086c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1343,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3058fd3",
+   "id": "8c6ee0c7",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1352,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4899a19f",
+   "id": "5c5e5946",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.794266Z",
