Saved all results for exp 2K and 5K

--- a/notebooks/out_of_domain_uncertainty_poor_income_5K/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_5K/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7cc9ac92",
+   "id": "2208c003",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3dd80806",
+   "id": "5efb5a29",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6e6761c1",
+   "id": "2fed5357",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c666058",
+   "id": "6c804b66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2763f7de",
+   "id": "001a3a8a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6989ea7",
+   "id": "e3f9a945",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.410865Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9f15ec0",
+   "id": "731a3f9e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.420665Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f36fec07",
+   "id": "8a1c95cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.432681Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84cf7b4b",
+   "id": "d0875b41",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24fae2a4",
+   "id": "f209253c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:31.105069Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b621f5c5",
+   "id": "5b87bac5",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "61a6ab47",
+   "id": "bfce077b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:31.147429Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9a59069",
+   "id": "112bc484",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "24e19cdf",
+   "id": "3daac5ba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:31.158029Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3114e081",
+   "id": "69982c4a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:31.522396Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bbb945c3",
+   "id": "82395e01",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:31.553851Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf87c12",
+   "id": "14495ba6",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "68369970",
+   "id": "9f17d4bc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:35.157263Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "61f1600e",
+   "id": "fd38cda0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:35.211764Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1375ef2f",
+   "id": "fd36ec7e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:38.974866Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aeade4ba",
+   "id": "c12c8eed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:39.025701Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "63062d07",
+   "id": "3f7bc636",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:39.045805Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68743fad",
+   "id": "77ad16d5",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a237b515",
+   "id": "411964a9",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4f64a1f2",
+   "id": "6432b01a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:39.078398Z",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "315d2d06",
+   "id": "098222fb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:39.112588Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c9b97e7",
+   "execution_count": 17,
+   "id": "cb49f704",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.357720Z",
@@ -1245,8 +1245,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/05, 07:58:38: Tuning RandomForestClassifier...\n"
+      "2023/11/05, 07:58:38: Tuning RandomForestClassifier...\n",
+      "2023/11/05, 08:01:58: Tuning for RandomForestClassifier is finished [F1 score = 0.7096160552975559, Accuracy = 0.7728000618363722]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-05 08:01:58 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "15a028fa73704141b1aeb09fd4f3779a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5fa8187f68224256b9fb58c6b3519bc1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1269,7 +1307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ecfb17",
+   "id": "447056b4",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1278,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "142e427b",
+   "id": "29059c51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b76dc515",
+   "id": "ae023998",
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72291ca8",
+   "id": "79610e9d",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2384,7 +2422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62e0f9de",
+   "id": "86584319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,7 +2443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05dbbbf7",
+   "id": "90156068",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2428,7 +2466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4d10b0",
+   "id": "82bf745e",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2437,7 +2475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd88167d",
+   "id": "373b82e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e44d9d",
+   "id": "cefda954",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2481,7 +2519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92a28f4f",
+   "id": "dff83409",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2490,7 +2528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff1d7ac",
+   "id": "c2472b92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cadea2b",
+   "id": "5f74747a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2534,7 +2572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7223a2c1",
+   "id": "6d35e60d",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2543,7 +2581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8850e890",
+   "id": "cfb3e8f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2564,7 +2602,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e85d93aa",
+   "id": "a4b714da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2593,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e036d8",
+   "id": "ffdb4c30",
    "metadata": {},
    "outputs": [],
    "source": []
